2009-08-25  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_env_pref_dialog.c: 
	  Fix several issues found with the location preferences, specifically
	  w.r.t. incorrect setting of config_file props, causing validation
	  errors, as well as the incorrect behaviour of some NS toggles.
	* capplet/nwam_location_dialog.c:
	  Fix small memory leak.
	* common/nwamui_env.c: 
	  Fix nwamui_env_set_*_config_file() variations to allow NULL value,
	  which removes the associated property.

2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c, common/libnwamui.h:
	  Add function nwamui_util_confirm_removal() to meet UI spec where
	  it's a Cancel/Remove button set rather than No/Yes. This fixes
	  defect#10842.
	* capplet/nwam_conn_conf_ip_panel.c, capplet/nwam_location_dialog.c: 
	  Update to use confirm removal function.

2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_location_dialog.c: 
	  Fix incorrect use of toggled_env in apply() which caused a crash
	  where it could sometimes be NULL.
	  Fix defect#10802, where the Rules button wasn't being enabled when
	  an activated by rules location was selected.

2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c:
	  Fix defect#10876 where comma separated string was being incorrectly
	  constructed in nwamui_util_glist_to_comma_string().
	* common/nwamui_wifi_net.c: 
	  Fix mis-match of type of wep key property and declared type.

2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.7
	* common/nwamui_daemon.c: 
	  Fix some minor warnings, and change DEBUG_STATUS to take correct
	  list of params.
	* common/libnwamui.c, common/nwamui_ncu.c, common/nwamui_ncu.h:
	  Add basic support for Duplicate Addresses aux state.
	* nwam_core/lib/i386/libnwam.so.1, nwam_core/lib/sparc/libnwam.so.1,
	  nwam_core/usr/include/libdlwlan.h, nwam_core/usr/include/libnwam.h:
	  Update to latest to fix defect#10767.
	* autogen.sh:
	  Fix typo
